# tracerlite

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  vulkan_simple.h  world.h
shaders/: compute.spv  shader.compute  shader.frag  shader.hlsl  shader.vert  vert.spv
src/: camera.c  main.c  vulkan_simple.c  world.c
